[gd_scene load_steps=5 format=3 uid="uid://chms8krmbyon1"]

[ext_resource type="Script" path="res://player.gd" id="1_unqoa"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_of20w"]

[sub_resource type="PrismMesh" id="PrismMesh_bm5yi"]
size = Vector3(1, 1, 0.1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bedb4"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_unqoa")

[node name="body_model" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_of20w")

[node name="MeshInstance3D" type="MeshInstance3D" parent="body_model"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.75, -0.6)
mesh = SubResource("PrismMesh_bm5yi")

[node name="ray1" type="RayCast3D" parent="body_model"]
target_position = Vector3(0, 0, -1)

[node name="ray2" type="RayCast3D" parent="body_model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
target_position = Vector3(0, 0, -1)

[node name="ray3" type="RayCast3D" parent="body_model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="body_model"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bedb4")
